--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>server side</title>
+    <title>ecommerce-WebApplication</title>
     <link rel="stylesheet" href="styles/rule1.css">
 </head>
 <body>
