--- a/index5.html
+++ b/index5.html
@@ -4,34 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fetch json from api and map lat lon</title>
+    <title>specify the road of the product</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
     integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
     crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
     integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
     crossorigin=""></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script> 
-    <style>
-        body {
-            height: 1000px;
-        }       
-        /* #btn {
-            border: none;
-            background-color: black;
-            color: white;
-            border-radius:4px;
-            cursor: pointer;
-
-        } */
-       
-    </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>   
     <link rel="stylesheet" href="styles/map.css">
 </head>
 <body id="body">
-
     <div class="container-confirme">
-
     <fieldset>
         <legend> put yes if this is the location you want to get it:</legend>
     
@@ -46,7 +30,7 @@
           <label for="dewey">No</label>
         </div>
         <div class="confirm-location">
-            <input type="submit" id="submit" method="POST">
+           <a href=""></a> <input type="submit" id="confirm_BTN" method="POST">
         </div>
     </fieldset>
 </div>
