--- a/index1.html
+++ b/index1.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ecommerce-WebApplication</title>
+    <title>server side</title>
     <link rel="stylesheet" href="styles/rule1.css">
 </head>
 <body>
-
+ 
     <div id="nav-id" class="nav-bar">
+      <div class="login">
+        <div class="login-txt">Login</div>
+         <img src="images/user.png" alt="">
+       </div>
         <div class="container-bar" id="container-bar">
           <img alt="" src="" id="menu">
           <div class="logo" id="logo">
@@ -29,6 +33,9 @@
         <svg id="baskett" width="22" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/></svg>
           </div>
           <img id="profile-id" class="profile" src="images/image-avatar.png" alt="">
+        </div>
+        <div class="toggleButton">
+          <img src="images/icons8-day-and-night-50.png" alt="">
         </div>
       </div>
       <hr id="hr[0]">
@@ -57,6 +64,7 @@
           <img id="confirm-delete" src="images/icon-delete.svg" alt="">
         </div>
       </div>
+    
       </div>
       <button id="button-box-confirm">checkout</button>
     </div>
@@ -78,6 +86,7 @@
       <img src="images/icon-previous.svg" id="previous" alt="">
         <img id="big-img-id" class="big-img" src="images/image-product-1.jpg">
         <img src="images/icon-next.svg" alt="" id="next">
+
       </div>
       <div id="small-img-id" class="small-img ">
         <img id="small-1" class="active" src="images/image-product-1-thumbnail.jpg" alt="">
@@ -123,6 +132,7 @@
       <div class="pre" id="pre">
       <img src="images/icon-previous.svg" alt="">
     </div>
+
     </div>
       <div class="small-images" id="small-img-popup">
         <img src="images/image-product-1.jpg" alt="">
@@ -143,6 +153,8 @@
       </div>
     </div>
   </div>
+  <script src="bundle.js"></script>
+
 <script src="src/master1.js"></script>
 
 
